<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#E5E5E5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="95dp"
            android:background="@drawable/rounded_8_drawable"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo_1"
                android:layout_marginLeft="24dp"
                android:layout_marginVertical="24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/text1"
                    android:textColor="@color/neutral_grey_900"
                    android:textSize="16sp"
                    android:lineHeight="22sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/text2"
                    android:textColor="@color/neutral_grey_600"
                    android:textSize="12sp"
                    android:layout_marginVertical="2dp"
                    android:lineHeight="18sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/text3"
                    android:textColor="@color/neutral_grey_600"
                    android:textSize="12sp"
                    android:lineHeight="18sp"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="95dp"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ellipse_11y"
                android:layout_marginVertical="24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/text4"
                    android:textColor="@color/neutral_grey_900"
                    android:textSize="16sp"
                    android:lineHeight="22sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/text5"
                    android:textColor="@color/neutral_grey_600"
                    android:textSize="14sp"
                    android:layout_marginVertical="2dp"
                    android:lineHeight="20sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="237dp"
            android:background="@drawable/rounded_8_drawable"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/text7"
                android:textColor="@color/neutral_grey_900"
                android:textSize="20sp"
                android:lineHeight="26sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/text8"
                android:textColor="@color/primer_blue_900"
                android:textSize="14sp"
                android:layout_marginVertical="8dp"
                android:lineHeight="20sp"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="@drawable/belang_jam_drawable"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineHeight="28sp"
                    android:text="@string/text10"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/jam"
                    android:layout_alignParentRight="true"
                    android:layout_margin="8dp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginVertical="2dp"
                android:layout_marginTop="8dp"
                android:lineHeight="19sp"
                android:text="@string/text11"
                android:textColor="@color/neutral_grey_600"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="@drawable/rounded_8_drawable"
                android:gravity="center"
                android:backgroundTint="@color/primer_green_800"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="24sp"
                    android:text="@string/text12"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_8_drawable"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/text13"
                android:textColor="@color/neutral_grey_900"
                android:textSize="20sp"
                android:lineHeight="26sp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="7dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/kotak1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="7dp">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/kotak2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="@drawable/rounded_8_drawable"
                android:gravity="center"
                android:backgroundTint="@color/primer_green_800"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="24sp"
                    android:text="@string/text19"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/satu"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:lineHeight="20sp"
                        android:text="@string/text17"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/neutral_grey_900">

                    </TextView>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dua"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:lineHeight="20sp"
                        android:text="@string/text18"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/neutral_grey_900">

                    </TextView>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tiga"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:lineHeight="20sp"
                        android:text="@string/text19"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/neutral_grey_900">

                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/empat"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:lineHeight="20sp"
                        android:text="@string/text20"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/neutral_grey_900">

                    </TextView>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/lima"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:lineHeight="20sp"
                        android:text="@string/text21"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/neutral_grey_900">

                    </TextView>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/enam"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:lineHeight="20sp"
                        android:text="@string/text22"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/neutral_grey_900">

                    </TextView>
                </LinearLayout>
            </LinearLayout>

            </LinearLayout>

        </LinearLayout>


</ScrollView>